--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Box personal portfolio Template</title>
+    <title>Home - Box personal portfolio Template</title>
     <link rel="icon" href="img/fav.png" type="image/x-icon">
 
     <!-- Bootstrap -->
@@ -83,9 +83,9 @@
             <div class="table-cell">
                 <h1 class="box-headline letters rotate-2">
                     <span class="box-words-wrapper">
-                        <b class="is-visible">design.</b>
-                        <b>&nbsp;coding.</b>
-                        <b>graphic.</b>
+                        <b class="is-visible">Peach.</b>
+                        <b>&nbsp;Thailand.</b>
+                        <b>Test.</b>
                     </span>
 		        </h1>
                 <h5>everything you need to build your personal portfolio</h5>
