--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Bootstrap business-plate template </title>
+    <title></title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -32,7 +32,7 @@
   </head>
 <!-- NAVBAR
 ================================================== -->
-  <body>
+  <!-- <body>
 	<div class="top">
     <div class="container">
         <div class="row-fluid">
@@ -47,7 +47,7 @@
             </ul>
         </div>
     </div>
-	</div>
+	</div> -->
 	
     <!-- topHeaderSection -->	
     <div class="topHeaderSection">		
