--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html"><img src="assets/custom/img/logo.png" alt="My web solution" /></a>
+          <a class="navbar-brand" href="index.html"><img src="assets/custom/img/logo.png" alt="My web solution" width="168" height="35"/></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
