update navigate bar

--- a/index.html
+++ b/index.html
@@ -67,18 +67,17 @@
             
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="#">หน้าหลัก</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">ผลิตภัณฑ์<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="#">Action</a></li>
                 <li><a href="#">Another action</a></li>
                 <li><a href="#">Something else here</a></li>
               </ul>
             </li>
-            <li><a href="#about">About us</a></li>
-            <li><a href="#about">Blog</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">เกี่ยวกับเรา</a></li>
+            <li><a href="#contact">ติดต่อเรา</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
