--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               </ul>
             </li>
             <li><a href="#about">เกี่ยวกับเรา</a></li>
-            <li><a href="#contact">ติดต่อเรา</a></li>
+            <li><a href="contact.html">ติดต่อเรา</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
