--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">หน้าหลัก</a></li>
+            <li class="active"><a href="index.html">หน้าหลัก</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">ผลิตภัณฑ์<b class="caret"></b></a>
               <ul class="dropdown-menu">
