--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
             
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">หน้าหลัก</a></li>
+            <li><a href="index.html">หน้าหลัก</a></li>
             <li class="dropdown">
               <a href="product.html" class="dropdown-toggle" data-toggle="dropdown">ผลิตภัณฑ์<b class="caret"></b></a>
               <ul class="dropdown-menu">
@@ -77,7 +77,7 @@
               </ul>
             </li>
             <li><a href="about.html">เกี่ยวกับเรา</a></li>
-            <li><a href="contact.html">ติดต่อเรา</a></li>
+            <li class="active"><a href="contact.html">ติดต่อเรา</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
