--- a/product.html
+++ b/product.html
@@ -67,9 +67,9 @@
             
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">หน้าหลัก</a></li>
+            <li ><a href="index.html">หน้าหลัก</a></li>
             <li class="dropdown">
-              <a href="product.html" class="dropdown-toggle" data-toggle="dropdown">ผลิตภัณฑ์<b class="caret"></b></a>
+              <a href="product.html" class="dropdown-toggle active" data-toggle="dropdown">ผลิตภัณฑ์<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="#">Action</a></li>
                 <li><a href="#">Another action</a></li>
