--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
   </head>
 <!-- NAVBAR
 ================================================== -->
-  <!-- <body>
-	<div class="top">
+<body>
+	<!-- <div class="top">
     <div class="container">
         <div class="row-fluid">
             <ul class="phone-mail">
@@ -82,4 +82,6 @@
         </div><!--/.nav-collapse -->
       </div>
 	</div>
-	</div>
+  </div>
+</body>
+  </html>
