--- a/product.html
+++ b/product.html
@@ -32,7 +32,7 @@
   </head>
 <!-- NAVBAR
 ================================================== -->
-  <!-- <body>
+<body>
 	<div class="top">
     <div class="container">
         <div class="row-fluid">
@@ -82,4 +82,6 @@
         </div><!--/.nav-collapse -->
       </div>
 	</div>
-	</div>
+  </div>
+</body>
+</html>
