--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,10 @@
 	
     <link href="assets/custom/css/business-plate.css" rel="stylesheet">
     <link rel="shortcut icon" href="assets/custom/ico/favicon.ico">
+
+    <!-- Title bar -->
+    <link rel="shortcut icon" type="image/x-icon" href="assets/custom/img/logo.ico" />
+    <title>ติดต่อเรา - NANO TANK</title>
   </head>
 <!-- NAVBAR
 ================================================== -->
