--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en th">
   <head>
    
     <meta charset="utf-8">
@@ -36,7 +36,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/custom/img/logo.ico" />
     <title>หน้าแรก - NANO TANK</title>
 
-    
+
   </head>
 <!-- NAVBAR
 ================================================== -->
