--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="index.html">หน้าหลัก</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">ผลิตภัณฑ์<b class="caret"></b></a>
+              <a href="product.html" class="dropdown-toggle" data-toggle="dropdown">ผลิตภัณฑ์<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="#">Action</a></li>
                 <li><a href="#">Another action</a></li>
