add picture src folder

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <li><a href="#">Something else here</a></li>
               </ul>
             </li>
-            <li><a href="#about">เกี่ยวกับเรา</a></li>
+            <li><a href="about.html">เกี่ยวกับเรา</a></li>
             <li><a href="contact.html">ติดต่อเรา</a></li>
           </ul>
         </div><!--/.nav-collapse -->
