--- a/product.html
+++ b/product.html
@@ -38,7 +38,7 @@
 <!-- NAVBAR
 ================================================== -->
 <body>
-	<div class="top">
+	<!-- <div class="top">
     <div class="container">
         <div class="row-fluid">
             <ul class="phone-mail">
