edit active nav bar

--- a/about.html
+++ b/about.html
@@ -81,8 +81,8 @@
                 <li><a href="#">Something else here</a></li>
               </ul>
             </li>
-            <li><a href="about.html">เกี่ยวกับเรา</a></li>
-            <li class="active"><a href="contact.html">ติดต่อเรา</a></li>
+            <li class="active"><a href="about.html">เกี่ยวกับเรา</a></li>
+            <li><a href="contact.html">ติดต่อเรา</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
