--- a/product.html
+++ b/product.html
@@ -73,8 +73,8 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li ><a href="index.html">หน้าหลัก</a></li>
-            <li class="dropdown">
-              <a href="product.html" class="dropdown-toggle active" class="active" data-toggle="dropdown">ผลิตภัณฑ์<b class="caret"></b></a>
+            <li class="dropdown"  class="active">
+              <a href="product.html" class="dropdown-toggle active" data-toggle="dropdown">ผลิตภัณฑ์<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="#">Action</a></li>
                 <li><a href="#">Another action</a></li>
