add prd category

--- a/product.html
+++ b/product.html
@@ -76,9 +76,13 @@
             <li class="dropdown"  class="active">
               <a href="product.html" class="dropdown-toggle active" data-toggle="dropdown">ผลิตภัณฑ์<b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
+                <li><a href="prd_foreground_water_collect_fiber.html">ถังเก็บน้ำบนดิน Fiber</a></li>
+                <li><a href="prd_foreground_water_collect_pe.html">ถังเก็บน้ำบนดิน PE</a></li>
+				        <li><a href="prd_underground_water_collect_fiber.html">ถังเก็บน้ำใต้ดิน Fiber</a></li>
+                <li><a href="prd_underground_water_collect_pe.html">ถังเก็บน้ำใต้ดิน PE</a></li>
+                <li><a href="prd_treatment_tank_fiber.html">ถังเก็บบำบัด Fiber</a></li>
+                <li><a href="prd_treatment_tank_pe.html">ถังบำบัด PE</a></li>
+                <li><a href="prd_fat_trapper.html">ถังดักไขมัน PE</a></li>
               </ul>
             </li>
             <li><a href="about.html">เกี่ยวกับเรา</a></li>
