fix bug nav bar

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 				<li><a href="prd_treatment_tank_fiber.html">ถังเก็บบำบัด Fiber</a></li>
 				<li><a href="prd_treatment_tank_pe.html">ถังบำบัด PE</a></li>
 				<li><a href="prd_fat_trapper.html">ถังดักไขมัน PE</a></li>
+				<li><a href="prd_accessories.html">อุปกรณ์อื่นๆ</a></li>
               </ul>
             </li>
             <li><a href="about.html">เกี่ยวกับเรา</a></li>
