edit contact page

--- a/contact.html
+++ b/contact.html
@@ -97,8 +97,8 @@
 	</div>
 	</div>
 
-    <!-- bannerSection -->
-    <div class="bannerSection">
+   <!--  bannerSection -->
+   <!--  <div class="bannerSection">
 		<div class="slider-inner">
 			<div id="da-slider" class="da-slider">
 				<div class="da-slide">
@@ -127,14 +127,14 @@
 					<span class="da-arrows-next"></span>		
 				</nav>
 			</div><!--/da-slider-->
-		</div><!--/slider-->
-		<!--=== End Slider ===-->
+		<!-- </div>/slider--> -->
+		<!--=== End Slider === -->
 
 
 	</div>
     <!-- highlightSection -->
-    <div class="highlightSection">
-		<div class="container">
+    <!-- <div class="highlightSection"> -->
+		<!-- <div class="container">
 			<div class="row">
 			<div class="col-md-8">
 			 <h2>Responsive Design</h2>
@@ -150,9 +150,9 @@
 			</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
     <!-- bodySection -->
-		<div class="serviceBlock">
+		<!-- <div class="serviceBlock">
 		<div class="container">
 				<div class="row">
 					<div class="col-md-4">
@@ -254,9 +254,9 @@
 				</div>
 		</div>
 		</div>
-	<hr>
+	<hr> -->
 	
-	
+<!-- 	
     <div class="bodySection" style="display:none">
 		<div class="container">		
 			<div class="ourServices">
@@ -337,25 +337,29 @@
 					 </div>
 				 </div>	
 			</div>
-		</div>
+		</div> -->
 
 		
-		<div class="testimonails">
+		<!-- <div class="testimonails">
 		<div class="container">
 		<blockquote class="">
                 <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,</p>
                 <small>- Rob & Kelly</small>
             </blockquote>		
 		</div>
-		</div>
+		</div> -->
 		
 		<div class="container">
 		<div class="row">
 			<div class="col-md-4"> 
-				<h3 class="title">Reason to choose us</h3>
+				<h3 class="title">ติดต่อเรา</h3>
 				<p>
-				On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire
+				บริษัท ธรรมธร เอ็นจิเนียริ่ง จำกัด
 				</p>
+				<p>
+				Dhummatorn Engineering CO.,LTD.
+				</p>
+				
 				<ul>
 					<li>Tick mark here Reason one</li>
 					<li>Tick mark here  Reason one</li>
