--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="th">
   <head>
-    <title>หน้าแรก - NANO TANK</title>
+    <title>ติดต่อเรา - NANO TANK</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -359,7 +359,7 @@
 				<p>
 				Dhummatorn Engineering CO.,LTD.
 				</p>
-				
+
 				<ul>
 					<li>Tick mark here Reason one</li>
 					<li>Tick mark here  Reason one</li>
