edit contact page with font size

--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
 					<span class="da-arrows-next"></span>		
 				</nav>
 			</div><!--/da-slider-->
-		<!-- </div>/slider--> -->
+		<!-- </div>/slider--> 
 		<!--=== End Slider === -->
 
 
@@ -351,22 +351,34 @@
 		
 		<div class="container">
 		<div class="row">
-			<div class="col-md-4"> 
-				<h3 class="title">ติดต่อเรา</h3>
+			<div class="col-md-6"> 
+				<h4 class="title">ติดต่อเรา</h4>
 				<p>
-				บริษัท ธรรมธร เอ็นจิเนียริ่ง จำกัด
-				</p>
-				<p>
-				Dhummatorn Engineering CO.,LTD.
+					<font size= "6">
+					บริษัท ธรรมธร เอ็นจิเนียริ่ง จำกัด<br>
+					Dhummatorn Engineering CO.,LTD.
+					</font>
+				
 				</p>
 
+				<p>
+						<font size= "4">
+						วรากร ศิริโอวัฒนะ<br>
+						Warakorn Siri-o-wattana<br>
+						</font>
+						<font size = "2">
+							B.Eng.Meanical / M.S. Environmental<br>
+						</font>
+						<font size = "3">
+							Managing Director
+						</font>
+					</p>
+
 				<ul>
-					<li>Tick mark here Reason one</li>
+					<li>Mobile : 089-183-8137</li>
+					<li>E-mail : warakorn1911@hotmail.co,th</li>
 					<li>Tick mark here  Reason one</li>
-					<li>Tick mark here  Reason one</li>
-					<li>Reason one</li>
-					<li>Reason one</li>
-					<li>Reason one</li>
+				
 				</ul>
 				<p>
 				On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire
@@ -375,7 +387,7 @@
 				On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire
 				</p>
 			</div>
-			<div class="col-md-8">
+			<div class="col-md-6">
 			<div class="projectList">
 				<h3 class="title">Latest Projects</h3>
 				<div class="media">
@@ -422,7 +434,7 @@
 		</div>
 	</div>
 	</div>
-    <!-- clientSection -->
+    <!-- clientSection
 	<div class="container">
 		<h3 class="title">Our Clients</h3>
 		<div class="clientSection">
@@ -447,7 +459,7 @@
 					</div>
 				</div>
 		</div>
-	 </div>
+	 </div> -->
 
 	
 	
