--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		<div class="slider-inner">
 			<div id="da-slider" class="da-slider">
 				<div class="da-slide">
-					<h2><i>Clean</i> <br> <i>Responsive </i> <br> <i>HTML5 & CSS3</i></h2>
+					<h2><i>Storage Water</i> <br> <i>Wastewater </i> <br> <i>Treatment</i></h2>
 					<p><i>Professional look</i> <br> <i>Compitable in different device</i> <br> <i>Mordern technology in use</i></p>
 					<div class="da-img"><img src="assets/custom/img/Responsive-Website-Design-Devices.png" alt="" /></div>
 				</div>
