adjust font size

--- a/contact.html
+++ b/contact.html
@@ -352,9 +352,9 @@
 		<div class="container">
 		<div class="row">
 			<div class="col-md-6"> 
-				<h4 class="title">ติดต่อเรา</h4>
+				<h2 class="title">ติดต่อเรา</h2>
 				<p>
-					<font size= "6">
+					<font size= "5">
 					บริษัท ธรรมธร เอ็นจิเนียริ่ง จำกัด<br>
 					Dhummatorn Engineering CO.,LTD.
 					</font>
@@ -366,9 +366,9 @@
 						วรากร ศิริโอวัฒนะ<br>
 						Warakorn Siri-o-wattana<br>
 						</font>
-						<font size = "2">
+						<!-- <font size = "2">
 							B.Eng.Meanical / M.S. Environmental<br>
-						</font>
+						</font> -->
 						<font size = "3">
 							Managing Director
 						</font>
@@ -377,7 +377,6 @@
 				<ul>
 					<li>Mobile : 089-183-8137</li>
 					<li>E-mail : warakorn1911@hotmail.co,th</li>
-					<li>Tick mark here  Reason one</li>
 				
 				</ul>
 				<p>
@@ -387,7 +386,7 @@
 				On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire
 				</p>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-">
 			<div class="projectList">
 				<h3 class="title">Latest Projects</h3>
 				<div class="media">
