--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 		<div class="slider-inner">
 			<div id="da-slider" class="da-slider">
 				<div class="da-slide">
-					<h2><i>Storage Water</i> <br> <i>Wastewater </i> <br> <i>Treatment</i></h2>
-					<p><i>Professional look</i> <br> <i>Compitable in different device</i> <br> <i>Mordern technology in use</i></p>
+					<h3><i>Nano</i> <br> <i>Wastewater </i> <br> <i>Treatment</i></h3>
+					<p><i>Design  Manufacture</i> <br> <i>Distribute</i> <br> <i>Install  Service</i></p>
 					<div class="da-img"><img src="assets/custom/img/Responsive-Website-Design-Devices.png" alt="" /></div>
 				</div>
 				
