--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			<div id="da-slider" class="da-slider">
 				<div class="da-slide">
 					<h2><i>Nano</i> <br> <i>Wastewater </i> <br> <i>Treatment</i></h2>
-					<p><i>Design  Manufacture</i> <br> <i>Distribute</i> <br> <i>Install  Service</i></p>
+					<p><i>Design  Manufacture</i> <br> <i>Distribute  &  Install</i> <br> <i>Service</i></p>
 					<div class="da-img"><img src="assets/custom/img/Responsive-Website-Design-Devices.png" alt="" /></div>
 				</div>
 				
