--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 		<div class="slider-inner">
 			<div id="da-slider" class="da-slider">
 				<div class="da-slide">
-					<h2><i>Nano</i> <br> <i>Wastewater </i> <br> <i>Treatment</i></h2>
+					<h2><i>NANO</i> <br> <i>Wastewater </i> <br> <i>Treatment</i></h2>
 					<p><i>Design , Manufacture</i> <br> <i>Distribute , Install</i> <br> <i>Service</i></p>
 					<div class="da-img"><img src="assets/custom/img/Responsive-Website-Design-Devices.png" alt="" /></div>
 				</div>
 				
 				<div class="da-slide">
-					<h2><i>Clean</i> <br> <i>Responsive </i> <br> <i>HTML5 & CSS3</i></h2>
+					<h2><i>นาโน</i> <br> <i>Responsive </i> <br> <i>HTML5 & CSS3</i></h2>
 					<p><i>Professional look</i> <br> <i>Compitable in different device</i> <br> <i>Mordern technology in use</i></p>
 					<div class="da-img"><img src="assets/custom/img/bootstrap-mobile-template.png" alt="" /></div>
 				</div>
@@ -124,7 +124,7 @@
 		<div class="container">
 			<div class="row">
 			<div class="col-md-8">
-			 <h2>Responsive Design</h2>
+			 <h2>Welcom To DHUMMATORN ENGINEERING</h2>
 			 <em> vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis </em><br><br>
 			 At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos <a href="#">dolores et quas molestias </a>excepturi sint occaecati cupiditate non provident
 				</p>
