--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 		<div class="container">
 			<div class="row">
 			<div class="col-md-8">
-			 <h2>Welcom To DHUMMATORN ENGINEERING</h2>
+			 <center><h2>Welcom To DHUMMATORN ENGINEERING</h2></center>
 			 <em> vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis </em><br><br>
 			 At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos <a href="#">dolores et quas molestias </a>excepturi sint occaecati cupiditate non provident
 				</p>
