--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@
 		<div class="container">
 			<div class="row">
 			<div class="col-md-8">
-			 <center><h2 style="color: #00aac0">WELCOME TO DHUMMATORN ENGINEERING  CO.,LTD.</h2></center>
+			 <center><h2 style="color: #00aac0">WELCOME TO DHUMMATORN ENGINEERING  CO.,LTD.</h2>
 			 <em> vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis </em><br><br>
 			 At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos <a href="#">dolores et quas molestias </a>excepturi sint occaecati cupiditate non provident
 				</p>
 			</div>
 			<div class="col-md-4 align-right"> 
 			<h4>Responsive Design
-			At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis </h4>
+			At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis </h4></center>
 			<a class="btn btn btn-brand" href="#">read more</a>
 				</p>
 			</div>
