--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
     <link href="assets/custom/css/business-plate.css" rel="stylesheet">
     <link rel="shortcut icon" href="assets/custom/ico/favicon.ico">
 
-
     <!-- Title bar -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/custom/img/logo.ico" />
-
+	<link rel="shortcut icon" type="image/x-icon" href="assets/custom/img/logo.ico" />
+	
+	<!-- Custom Font -->
+	<link href="https://fonts.googleapis.com/css?family=Kanit|Prompt&display=swap" rel="stylesheet">
 
   </head>
 <!-- NAVBAR
