--- a/index.html
+++ b/index.html
@@ -37,15 +37,11 @@
 	<div class="top">
 		<div class="container">
 			<div class="row-fluid">
-				<ul class="phone-mail">
+				<center><ul class="phone-mail">
 					<li><i class="fa fa-phone"></i><span>074 11 9211 00</span></li>
 					<li><i class="fa fa-envelope"></i><span>developer.sba@gmail.com</span></li>
 				</ul>
-				<ul class="loginbar">
-					<li><a href="#" class="login-btn">Help</a></li>
-					<li class="devider">&nbsp;</li>
-					<li><a href="#" class="login-btn">Login</a></li>
-				</ul>
+			</center>
 			</div>
 		</div>
 	</div>
