--- a/index.html
+++ b/index.html
@@ -34,17 +34,20 @@
 ================================================== -->
 
 <body>
-	<div class="top">
+	<!-- <div class="top">
 		<div class="container">
 			<div class="row-fluid">
-				<center><ul class="phone-mail">
-					<li><i class="fa fa-phone"></i><span>074 11 9211 00</span></li>
-					<li><i class="fa fa-envelope"></i><span>developer.sba@gmail.com</span></li>
+				<ul class="phone-mail">
+					<a href="tel:+66891388137">
+						<li><i class="fa fa-phone"></i><span>089-138-8137</span></li>
+					</a>
+					<a href="mailto: abc@example.com">
+						<li><i class="fa fa-envelope"></i><span>warakon1911@hotmail.co.th</span></li>
+					</a>
 				</ul>
-			</center>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<!-- topHeaderSection -->
 	<div class="topHeaderSection">
@@ -129,22 +132,24 @@
 	<div class="highlightSection">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8">
+				<div class="col-12">
 					<center>
 						<h2 style="color: #00aac0">WELCOME TO DHUMMATORN ENGINEERING CO.,LTD.</h2>
-						<em> vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis </em><br><br>
-						At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
-						deleniti atque corrupti quos <a href="#">dolores et quas molestias </a>excepturi sint occaecati
-						cupiditate non provident
-						</p>
+						<h4 style="font-family:'Kanit', 'Helvetica',sans-serif;"> บริษัท ธรรมธรเอ็นจิเนียริ่ง จำกัด
+							เป็นผู้ออกแบบ ผู้ผลิต และผู้จำหน่าย ถังเก็บน้ำเสีย ถังเก็บน้ำดีทั้งแบบบนดินและใต้ดิน
+							<br>รวมทั้งบริการให้คำปรึกษา และบริการติดตั้งโดยช่างผู้ชำนาญการ</h4>
+							
+						<h4>We are designers, manufacturers and suppliers. Waste water tank Water tanks, both on and
+							underground <br>Including consulting services And installation services by expert technicians
+						</h4>
 				</div>
-				<div class="col-md-4 align-right">
+				<!-- <div class="col-md-4 align-right">
 					<h4>Responsive Design
 						At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis </h4>
 					</center>
 					<a class="btn btn btn-brand" href="#">read more</a>
 					</p>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
