--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
 								<li><a href="prd_accessories.html">อุปกรณ์อื่นๆ</a></li>
 							</ul>
 						</li>
-						<li><a href="about.html">เกี่ยวกับเรา</a></li>
+						<!-- Edit here -->
+						<li><a href="#">เกี่ยวกับเรา</a></li>   
 						<li><a href="contact.html">ติดต่อเรา</a></li>
 					</ul>
 				</div>
@@ -104,9 +105,8 @@
 				</div>
 
 				<div class="da-slide">
-					<h2><i>นาโน</i> <br> <i>Responsive </i> <br> <i>HTML5 & CSS3</i></h2>
-					<p><i>Professional look</i> <br> <i>Compitable in different device</i> <br> <i>Mordern technology in
-							use</i></p>
+					<h2><i>NANO</i> <br> <i>Wastewater </i> <br> <i>Treatment</i></h2>
+					<p><i>Design , Manufacture</i> <br> <i>Distribute , Install</i> <br> <i>Service</i></p>
 					<div class="da-img"><img src="assets/custom/img/bootstrap-mobile-template.png" alt="" /></div>
 				</div>
 
@@ -154,7 +154,7 @@
 		</div>
 	</div>
 	<!-- bodySection -->
-	<div class="serviceBlock">
+	<!-- <div class="serviceBlock">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
@@ -255,11 +255,9 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<hr>
-
-
-	<div class="bodySection" style="display:none">
+	</div> -->
+	<!-- <hr> -->
+	<!-- <div class="bodySection" style="display:none">
 		<div class="container">
 			<div class="ourServices">
 				<div class="row">
@@ -314,12 +312,8 @@
 				</div>
 			</div>
 		</div>
-	</div>
-
-
-
-
-	<div class="services">
+	</div> -->
+	<!-- <div class="services">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3">
@@ -351,10 +345,8 @@
 				</div>
 			</div>
 		</div>
-	</div>
-
-
-	<div class="testimonails">
+	</div> -->
+	<!-- <div class="testimonails">
 		<div class="container">
 			<blockquote class="">
 				<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
@@ -363,9 +355,9 @@
 				<small>- Rob & Kelly</small>
 			</blockquote>
 		</div>
-	</div>
+	</div> -->
 
-	<div class="container">
+	<!-- <div class="container">
 		<div class="row">
 			<div class="col-md-4">
 				<h3 class="title">Reason to choose us</h3>
@@ -437,11 +429,11 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	</div>
 	</div>
 	<!-- clientSection -->
-	<div class="container">
+	<!-- <div class="container">
 		<h3 class="title">Our Clients</h3>
 		<div class="clientSection">
 			<div class="row">
@@ -465,12 +457,12 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 
 
 	<!-- footerTopSection -->
-	<div class="footerTopSection">
+	<!-- <div class="footerTopSection">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3">
@@ -543,13 +535,12 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<!-- footerBottomSection -->
 	<div class="footerBottomSection">
 		<div class="container">
-			&copy; 2014, Allright reserved. <a href="#">Terms and Condition</a> | <a href="#">Privacy Policy</a>
-			<div class="pull-right"> <a href="index.html"><img src="assets/custom/img/logo1.png"
-						alt="My web solution" /></a></div>
+			&copy; 2019, Allright reserved. <a href="#">Terms and Condition</a> | <a href="#">Privacy Policy</a>
+			<div class="pull-right"> <a href="index.html"></a></div>
 		</div>
 	</div>
 
